--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,14 @@
   margin:0 auto;
 }
 header{
-  
-
-
   background-image:url("img/sfondoheader.png");
-  background-size: contain;
+  background-size: cover;
   display: inline-block;
   position: relative;
-
+}
+.dimensioni{
+  width: 1200px;
+  height: 480px;
 }
 .immagine2{
   width: 800px;
