--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,25 @@ h1{
   color:white;
   margin-bottom: 25px;
 }
+nav{
+}
+.opzioni{
 
+  height:50px;
+  background-color: lightgrey;
+  vertical-align: middle;
+  line-height: 50px;
+  text-align: center;
+  margin:0 auto;
+
+}
+.opzioni>ul>li{
+  display: inline;
+  padding: 10px;
+  font-size: 15px;
+  font-style: normal;
+
+}
 .clearfix{
   margin-top: 10px;
 
