--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,6 @@ h1{
 nav{
 }
 .opzioni{
-
   height:50px;
   background-color: lightgrey;
   vertical-align: middle;
@@ -65,38 +64,76 @@ nav{
 }
 .clearfix{
   margin-top: 10px;
+}
+.contimmag{
+  width: 26px;
+  height: 27PX;
+  line-height: 50px;
+  display: inline-block;
+}
 
+.contitem{
+    width: 100px;
+    height: 50px;
+    display: inline-block;
+    margin-left: 10px;
+}
+p{
+  margin-left: 10px;
 }
 
 .clearfix>div:first-child{
   width: 25%;
-  height: 300px;
+  height: 600px;
   background-color: pink;
 }
 .clearfix>div:nth-child(2){
   width: calc(50% - 20px);
-  height: 600px;
+  height: 300px;
  background-color: violet;
  margin:0 10px;
 }
-.special>div{
+/* .special>div{
   width: 25%;
   height: 300px;
   background-color: pink;
   border: 2px solid black;
-}
+} */
 footer{
   height: 100px;
   background-color:lightblue;
-  margin-top: 10px;
+  margin-top: 50px;
 }
-.special{
-  height: 500px;
+
+.box3{
+  width: 25%;
+  height: 1000px;
+  background-color: white;
+  border: 2px solid black;
+
 }
 .box4{
-  width: 25%;
-  height: 250px;
-  background-color: pink;
+  width: 100%;
+  height: 300px;
+  background-color:white;
+  border: 2px solid black;
+
+  display: block;
+}
+
+.box5{
+  width:100% ;
+  height: 300px;
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 10px;
+  display: block;
+
+}
+.box6{
+  width:100%;
+  height: 300px;
+  background-color: white;
   border: 2px solid black;
   margin-top: 10px;
 }
