--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,16 @@
   margin:0;
   padding: 0;
 }
-/* .sfondo{
- width: 100vw;
- background-image:url("img/sfondo.png");
- background-size:100%;
- background-image:("img/sfondo.png");
+
+/* body{
+  background-image: url("img/sfondo.png");
 } */
 .page{
   width: 1200px;
+  margin:0 auto;
+ background-image: url("img/sfondo.png");
+ background-size: cover;
+
 
 }
 
@@ -24,10 +26,6 @@
   float: left;
 }
 
-.page{
-  width: 1200px;
-  margin:0 auto;
-}
 header{
   margin-top: 20px;
   background-image:url("img/sfondoheader.png");
@@ -83,18 +81,21 @@ nav{
   margin-top: 10px;
 }
 .contimmag{
-  width: 26px;
-  height: 27PX;
+  width: 50px;
+  height: 50PX;
   line-height: 50px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.box1 p{
+  color:green;
+}
+.contitem{
+  width: 50px;
+  height: 50px;
   display: inline-block;
 }
 
-.contitem{
-  width: 100px;
-  height: 50px;
-  display: inline-block;
-  margin-left: 10px;
-}
 p{
   margin-left: 10px;
 }
@@ -103,6 +104,7 @@ p{
   width: 25%;
   height: 600px;
   border:1px solid black;
+  background-color: white;
 }
 .clearfix>div:nth-child(2){
 width: calc(50% - 20px);
@@ -118,7 +120,7 @@ h2{
 
 .box3{
   width: 25%;
-  height: 1000px;
+  height: 900px;
   background-color: white;
 
 
