--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -30%);
-
 }
 
 /* utility class */
@@ -30,6 +29,7 @@
 .left{
   float: left;
 }
+/* end utility class */
 
 header{
   margin-top: 20px;
@@ -126,38 +126,44 @@ h2{
 .box3{
   width: 25%;
   height: 900px;
-  background-color: white;
-
-
-}
-.box4{
-  width: 100%;
-  height: 300px;
-  background-color:white;
-  border: 1px solid black;
-  display: block;
 }
 
-.box5{
+.box4,.box5,.box6{
   width:100% ;
   height: 300px;
   background-color: white;
   border: 1px solid black;
   margin-top: 10px;
   display: block;
-
-}
-.box6{
-  width:100%;
-  height: 300px;
-  background-color: white;
-  border: 2px solid black;
-  margin-top: 10px;
 }
 footer{
-  height: 100px;
+  height: 200px;
   background-color:white;
   margin-top: 50px;
   margin-bottom: 20px;
-  border: 1px solid black ;
+}
+.immaginifooter{
+  width: 1200px;
+  height: 100px;
+  display: inline-block;
+  position: relative;
+}
+
+.fb{
+  background-image: url("img/facebook-logo.jpg");
+  background-position: cover;
+  display: inline-block;
+}
+.ig{
+  background-image: url("img/instagram-logo.jpg");
+  background-position: cover;
+  display:inline-block;
+}
+.git{
+  background-image: url("img/github-logo.jpg");
+  background-position: cover;
+  display:inline-block;
+  position: absolute;
+  top:0;
+  right:0;
 }
